# folio

./: .env_example  .gitignore  Cargo.toml  Containerfile  LICENSE  NOTICE  README.md  RESUME.md  rustc-ice-2026-03-08T11_08_59-68983.txt  rustc-ice-2026-03-09T09_29_56-269088.txt  rustc-ice-2026-03-09T10_54_14-304428.txt
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
app/: Cargo.toml  tailwind.css
app/assets/: components.css  main.css  tailwind.css  typography.css
app/src/: main.rs  router.rs  seo_routes.rs  state.rs
assets/lang/: en-US.ftl  fr-FR.ftl
components/: Cargo.toml  tailwind.css
components/assets/: dx-components-theme.css
components/src/: lib.rs  progress_bar.rs  seo.rs
components/src/components/: mod.rs
components/src/components/badge/: style.css
components/src/components/button/: style.css
components/src/components/callout/: component.rs  style.css
components/src/components/dropdown/: style.css
components/src/components/dropdown_menu/: style.css
components/src/components/grid/: component.rs
components/src/components/search/: component.rs  style.css
components/src/components/separator/: component.rs  style.css
components/src/components/toast/: component.rs  mod.rs  style.css
components/src/components/tooltip/: component.rs  style.css
components/src/decorations/: diagonals.rs  mod.rs
components/src/decorations/orbit/: mod.rs  orbit_dots.css  orbit_dots.rs  orbit_svg.rs  style.css
components/src/decorations/squares/: component.rs  mod.rs  style.css
components/src/markdown/: mod.rs  parser.rs  preprocess.rs  rewrite.rs  style.css
components/src/seo/: author.rs  breadcrumb.rs  component.rs  mod.rs  props.rs
components/src/svg/: burger.rs  connect.rs  dark.rs  experience.rs  github.rs  knowledge.rs  light.rs  linkedin.rs  mod.rs  projects.rs
entities/: Cargo.toml
entities/assets/: experiences.en.yaml  experiences.fr.toml  experiences.fr.yaml  projects.yaml
entities/src/: lib.rs
entities/src/article/: api.rs  mock.rs  mod.rs  model.rs  ui.rs
entities/src/article/api/: mock.rs  mod.rs
entities/src/article/model/: mod.rs  store.rs
entities/src/experience/: api.rs  mod.rs  model.rs  ui.rs
entities/src/metadata/: enums.rs  mod.rs  ui.rs
entities/src/nav/: cardinal.rs  cardinal_cell.rs  mod.rs
entities/src/project/: mod.rs  ui.rs
entities/src/project/api/: init.rs  mock.rs  mod.rs
entities/src/project/model/: mod.rs  repository.rs  store.rs
features/: Cargo.toml  tailwind.css
features/assets/: projects.en.yaml  projects.fr.toml  projects.fr.yaml
features/src/: lang.rs  lib.rs  social.rs  terminal.rs  theme.rs
features/src/articles/: mod.rs  ui.rs
features/src/contact/: api.rs  mod.rs  model.rs  ui.rs
features/src/experience/: mod.rs  style.css  ui.rs
features/src/experiences/: mod.rs  model.rs  style.css  ui.rs
features/src/lang/: api.rs  mod.rs  ui.rs
features/src/projects/: mod.rs  ui.rs
features/src/resume/: mod.rs  ui.rs
features/src/theme/: mod.rs  ui.rs
kernel/: Cargo.toml  build.rs
kernel/assets/lang/: en-US.ftl  fr-FR.ftl
kernel/src/: build_info.rs  config.rs  git.rs  init.rs  lang.rs  lib.rs  mail.rs  rate_limit.rs  resources.rs  seo.rs  seo_routes.rs  theme.rs  umami.rs
kernel/src/git/: client.rs  mod.rs  repository.rs
kernel/src/seo/: keywords.rs  mod.rs  routes.rs
kernel/src/umami/: mod.rs  routes.rs
pages/: Cargo.toml  tailwind.css
pages/assets/: tos.fr.md
pages/src/: article.rs  blog.rs  connect.rs  experience.rs  home.rs  knowledge.rs  knowledge_base.rs  lab.rs  lib.rs  not_found.rs  project.rs  projects.rs  tos.rs
pages/src/home/: cardinal.rs  center.rs  decorations.rs  home.css  hub.rs  mod.rs  orbit.rs  ui.rs
resources/: experience.en.toml  experiences.en.toml  experiences.fr.toml  legal.en.md  legal.fr.md  projects.en.toml  tos.en.md  tos.fr.md
widgets/: Cargo.toml
widgets/src/: footer.rs  lib.rs
widgets/src/article/: mod.rs  ui.rs
widgets/src/article/ui/: mod.rs  skeleton.rs
widgets/src/articles/: api.rs  mod.rs  model.rs  ui.rs
widgets/src/articles/ui/: mod.rs  skeleton.rs
widgets/src/blog/: mod.rs  ui.rs
widgets/src/experiences/: mod.rs  ui.rs
widgets/src/footer/: mod.rs  ui.rs
widgets/src/home_center/: center_cell.rs  hub.rs  mod.rs
widgets/src/lab/: mod.rs  ui.rs
widgets/src/nav/: mod.rs  model.rs
widgets/src/nav/ui/: desktop.rs  mobile.rs  mod.rs  style.css
widgets/src/project/: mod.rs
widgets/src/project/ui/: mod.rs  skeleton.rs
widgets/src/projects/: mod.rs
widgets/src/projects/ui/: mod.rs
