[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
pages.workspace = true
widgets.workspace = true
features.workspace = true
entities.workspace = true
components.workspace = true
kernel.workspace = true

dioxus = { workspace = true, features = ["router", "fullstack"] }

[features]
default = ["web"]
web = ["dioxus/web", "pages/web", "widgets/web", "components/web", "entities/web"]
desktop = ["dioxus/desktop", "pages/desktop", "widgets/desktop", "components/desktop", "entities/desktop"]
mobile = ["dioxus/mobile", "pages/mobile", "widgets/mobile", "components/mobile", "entities/mobile"]
server = ["dioxus/server", "kernel/server", "pages/server", "widgets/server", "components/server", "entities/server"]
