[package]
name = "components"
description = "Core UI: business-agnostic, logic-free, reusable across layers"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
serde_json = { workspace = true }
kernel = { workspace = true }

# components are directly exposed to higher layers
# components = { package = "dioxus-tw-components", version = "0.2" }
dioxus-tw-components = { git = "https://github.com/gpoblon/dioxus-tw-components", version = "0.2.0" }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
comrak = "0.50.0"

[features]
web = ["dioxus-tw-components/web"]
desktop = ["dioxus-tw-components/desktop"]
mobile = ["dioxus-tw-components/mobile"]
server = ["dioxus-tw-components/server"]
