[package]
name = "entities"
version = "0.1.0"
edition = "2024"

[dependencies]
components.workspace = true
kernel.workspace = true

dioxus = { workspace = true }
strum.workspace = true
serde.workspace = true
anyhow.workspace = true
toml.workspace = true
serde-saphyr = { workspace = true, optional = true }

[features]
web = ["components/web"]
desktop = ["components/desktop"]
mobile = ["components/mobile"]
server = ["components/server", "dep:serde-saphyr"]
mock = []
