[package]
name = "features"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dioxus = { workspace = true }
dioxus-i18n = { version = "0.5.1" }
strum.workspace = true
kernel.workspace = true
components.workspace = true
#surrealdb = { version = "3.0.0-beta-2", optional = true }

[features]
server = ["dioxus/server"] #, "dep:surrealdb"]
