[package]
name = "features"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
dioxus = { workspace = true }
dioxus-i18n = { version = "0.5.1" }
serde.workspace = true
strum.workspace = true
tracing = "0.1"
kernel.workspace = true
components.workspace = true
garde = { version = "0.22.1", features = ["derive", "email"] }
#surrealdb = { version = "3.0.0-beta-2", optional = true }

[features]
web = ["components/web"]
desktop = ["components/desktop"]
mobile = ["components/mobile"]
server = ["dioxus/server", "components/server"] #, "dep:surrealdb"]
