[package]
name = "features"
description = "Business functionality representing user interactions."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dioxus = { workspace = true }
serde.workspace = true
strum.workspace = true
kernel.workspace = true
components.workspace = true
entities.workspace = true
garde = { version = "0.23.0", features = ["derive", "email"] }
#surrealdb = { version = "3.0.0-beta-2", optional = true }

[features]
web = ["components/web"]
desktop = ["components/desktop"]
mobile = ["components/mobile"]
server = ["dioxus/server", "components/server"]
