[package]
name = "kernel"
description = "Core: business-agnostic logic, reusable across layers"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
dioxus-i18n = { version = "0.5.1" }
strum.workspace = true
serde.workspace = true
anyhow.workspace = true
serde-saphyr.workspace = true
chrono.workspace = true

thiserror = "2.0.18"
bon = "3.8.2"
timeflow = { version ="1.0.2", features = ["full"]}

# server-only features
lettre = { version = "0.11", default-features = false, features = ["serde", "tokio1-rustls", "builder", "smtp-transport", "rustls-tls"], optional = true }
secrecy = { version = "0.10.3", features = ["serde"], optional = true }
octocrab = { version = "0.49.5", optional = true }
tar = { version = "0.4.44", optional = true }
flate2 = { version = "1.1.9", optional = true }
http-body-util = { version = "0.1.3", optional = true }
tokio = { version = "1.34.0", features = ["full"], optional = true }
axum = { version = "0.8", optional = true }
axum-client-ip = { version = "1.3.1", features = ["connect-info"], optional = true }
mime_guess = { version = "2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
dotenvy = { version = "0.15", optional = true }
envy = { version = "0.4", optional = true }



[build-dependencies]
chrono = { workspace = true }

[features]
server = ["dioxus/server", "dep:lettre", "dep:secrecy", "dep:octocrab", "dep:tar", "dep:flate2", "dep:http-body-util", "dep:tokio", "dep:axum", "dep:axum-client-ip", "dep:mime_guess", "dep:reqwest", "dep:dotenvy", "dep:envy"]
