[package]
name = "pages"
version = "0.1.0"
edition = "2024"

[dependencies]
features.workspace = true
components.workspace = true
widgets.workspace = true
kernel.workspace = true

dioxus = { workspace = true }
strum.workspace = true

serde.workspace = true

dioxus-html = { version = "0.7.3", features = ["serialize"]}

[features]
web = ["features/web", "components/web", "widgets/web"]
desktop = ["features/desktop", "components/desktop", "widgets/desktop"]
mobile = ["features/mobile", "components/mobile", "widgets/mobile"]
server = ["features/server", "components/server", "widgets/server"]
