[package]
name = "pages"
description = "Actual 1:1 rendered pages for the Folio application."
version = "0.1.0"
edition = "2024"

[dependencies]
entities.workspace = true
features.workspace = true
components.workspace = true
widgets.workspace = true
kernel.workspace = true

dioxus = { workspace = true }
strum.workspace = true

serde.workspace = true
serde_json.workspace = true
dioxus-html = { version = "0.7.3", features = ["serialize"]}

[features]
web = ["features/web", "components/web", "widgets/web"]
desktop = ["features/desktop", "components/desktop", "widgets/desktop"]
mobile = ["features/mobile", "components/mobile", "widgets/mobile"]
server = ["features/server", "components/server", "widgets/server"]
