[package]
name = "widgets"
version = "0.1.0"
edition = "2024"

[dependencies]
features.workspace = true
components.workspace = true
kernel.workspace = true

dioxus = { workspace = true }
strum.workspace = true

[features]
web = ["features/web", "components/web"]
desktop = ["features/desktop", "components/desktop"]
mobile = ["features/mobile", "components/mobile"]
server = ["features/server", "components/server"]
